--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Bedel/RegistrarReserva/RegistrarReservaDatos.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Vista/Bedel/RegistrarReserva/RegistrarReservaDatos.form
@@ -284,7 +284,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="3">
-                                <StringItem index="0" value="Estandar"/>
+                                <StringItem index="0" value="General"/>
                                 <StringItem index="1" value="Multimedios"/>
                                 <StringItem index="2" value="Laboratorio"/>
                               </StringArray>
